@@ -1,3 +1,21 @@
+/*
+ * Copyright (C) 2026 Inera AB (http://www.inera.se)
+ *
+ * This file is part of sklintyg (https://github.com/sklintyg).
+ *
+ * sklintyg is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * sklintyg is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ */
 package se.inera.intyg.certificateprintservice.playwright.certificate;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -13,23 +31,21 @@ class ElementCategoryConverterTest {
 
   @Test
   void shouldReturnHtmlForCategory() {
-    final var result = CategoryConverter.category(
-        Category.builder()
-            .id("ID")
-            .name("Name Category")
-            .questions(List.of(
-                Question.builder()
-                    .id("ID")
-                    .name("Name Question")
-                    .value(ElementValueText.builder()
-                        .text("Example text for value")
-                        .build()
-                    )
-                    .subQuestions(Collections.emptyList())
-                    .build()
-            ))
-            .build()
-    );
+    final var result =
+        CategoryConverter.category(
+            Category.builder()
+                .id("ID")
+                .name("Name Category")
+                .questions(
+                    List.of(
+                        Question.builder()
+                            .id("ID")
+                            .name("Name Question")
+                            .value(
+                                ElementValueText.builder().text("Example text for value").build())
+                            .subQuestions(Collections.emptyList())
+                            .build()))
+                .build());
 
     assertEquals(
         """
@@ -38,7 +54,6 @@ class ElementCategoryConverterTest {
              <h3 class="text-sm font-bold pt-[1mm] px-[5mm]">Name Question</h3>
              <p class="text-sm italic px-[5mm]">Example text for value</p>
             </div>""",
-        result.toString()
-    );
+        result.toString());
   }
 }
